# fastapi-template

./: .dockerignore  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  release.yaml  test.yaml
alembic/: env.py
alembic/versions/: c153c4dc183e_add_sa_datetime_type.py  d5bc80d01630_add_user_model.py
app/: logging.py  main.py  settings.py
app/api/: __init__.py  public_schemas.py
app/api/v1/: __init__.py
app/api/v1/user/: __init__.py  router.py  schemas.py
app/core/: __init__.py  db.py  uow.py
app/domains/: __init__.py  entity.py
app/domains/user/: __init__.py  base.py  exceptions.py  user.py
app/infrastructure/: __init__.py
app/infrastructure/repositories/: __init__.py  repository.py  user_repository.py
app/services/: __init__.py  user_service.py
app/utils/: version.py
src/: main.py  settings.py
src/core/: __init__.py  db.py  uow.py
tests/: conftest.py
tests/unit/: conftest.py  test_app.py
tests/unit/api/v1/user/: conftest.py  test_router.py
tests/unit/core/: test_db.py  test_uow.py
tests/unit/domains/user/: conftest.py  test_user.py
tests/unit/infrastructure/repositories/: test_repository.py  test_user_repository.py
tests/unit/services/: conftest.py  test_user_service.py
