[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "greenlet>=3.4.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pytest-cov>=7.1.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.31",
]

[tool.ruff]
src = ["app", "tests"]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
ignore = [
  # Line length regulated by ruff formatter
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "UP", "RUF100", "RUF101"]
"alembic/*" = ["D", "UP", "RUF100", "RUF101"]
